enum change dict
